vct/kustomize/vct/overlays/local/vct1/vct/add-ca.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vct-1
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: vct-ca-cert-1
      containers:
        - name: vct
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/vct/tls
